// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`showHelp prints help for missing scripts 1`] = `
"npx [1mrun[22m [2m[run-args] [node-args][22m <[32mscript[39m|[34mpattern[39m> [srcipt-args] ...

[4mExamples[24m:
  npx [1mrun[22m
  npx [1mrun[22m [32mclean[39m [32mbuild[39m
  npx [1mrun[22m [32mconfig[39m --env='testing' [32mbuild[39m [32mdeploy[39m
  npx [1mrun[22m [34mlint:*[39m
  npx [1mrun[22m [2m--inspect-brk[22m [32mjest[39m

[4mdefault script[24m:
  When calling without any arguemtns 'npx run' will run the
  [1m[32mdefault[39m[22m script if it has been defined.

[4mrun-args[24m:
  --help         Show this help.
  --dry-run      List scripts to be run, but don't run them.

[4mnode-args[24m:
  Any args before the first script are sent to npx as node args.

  --inspect      Run node with --inspect to debug scripts.
  --inspect-brk  Run node with --inspect-brk to debug scripts

[4mscripts[24m:
[31mno scripts discoverd[39m

You can add scripts using:

  ./package.json   - using npm run-scripts
  ./scripts module - exporting a single default object working
                     the same as the package.json run-scripts.
  ./scripts/*.js   - using any loadable nodejs module which is run
                     as a script given its basename

./scripts/*.js modules will override scripts of the same name defined in
the ./scripts module.
Scripts defined in the ./scripts module will override scripts of the same
name defined in ./package.json.

"
`;

exports[`showHelp prints help with list of scripts 1`] = `
"npx [1mrun[22m [2m[run-args] [node-args][22m <[32mscript[39m|[34mpattern[39m> [srcipt-args] ...

[4mExamples[24m:
  npx [1mrun[22m
  npx [1mrun[22m [32mclean[39m [32mbuild[39m
  npx [1mrun[22m [32mconfig[39m --env='testing' [32mbuild[39m [32mdeploy[39m
  npx [1mrun[22m [34mlint:*[39m
  npx [1mrun[22m [2m--inspect-brk[22m [32mjest[39m

[4mdefault script[24m:
  When calling without any arguemtns 'npx run' will run the
  [1m[32mdefault[39m[22m script if it has been defined.

[4mrun-args[24m:
  --help         Show this help.
  --dry-run      List scripts to be run, but don't run them.

[4mnode-args[24m:
  Any args before the first script are sent to npx as node args.

  --inspect      Run node with --inspect to debug scripts.
  --inspect-brk  Run node with --inspect-brk to debug scripts

[4mscripts[24m:
  [1m[32mdefault[39m[22m          [1mrun[22m [32mclean[39m [32mtest[39m
  [32mclean[39m            rimraf [2m./build[22m
  [32mcreate-pkg-json[39m  echo [2mdone[22m
  [32mdry[39m              [1mrun[22m [2m--dry-run[22m [32mclean[39m --verbose
  [32mtest[39m             echo [2mWorks on my machine![22m
"
`;
